--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <h1>{{ message }}</h1>
-    <p>Это простой сайт на Flask, развернутый на собственном сервере.</p>
+    <p>AHAHAH.</p>
     <p>Версия: 1.0</p>
 </body>
 </html>
